# liara-engine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Config.h.in  Doxyfile  FirstApp.cpp  FirstApp.h  LICENSE  Liara_Camera.cpp  Liara_Camera.h  Liara_Device.cpp  Liara_Device.h  Liara_GameObject.h  Liara_Model.cpp  Liara_Model.h  Liara_Pipeline.cpp  Liara_Pipeline.h  Liara_Renderer.cpp  Liara_Renderer.h  Liara_SwapChain.cpp  Liara_SwapChain.h  Liara_Window.cpp  Liara_Window.h  README.md  SimpleRenderSystem.cpp  SimpleRenderSystem.h  buildUnix.sh  compile.bat  compile.sh  envUnixExemple.cmake  envWindowsExemple.cmake  main.cpp
.github/workflows/: code-style.yml  compile-linux.yml  compile-windows.yml
Apps/FirstApp/: CubeModel.h  FirstApp.cpp  FirstApp.h
Apps/GravityApp/: GravityPhysicsSystem.h  GravityVecFieldApp.cpp  GravityVecFieldApp.h
Apps/SierpinskiApp/: SierpinskiApp.cpp  SierpinskiApp.h
Listener/: KeybordMovementController.cpp  KeybordMovementController.h
app/: CMakeLists.txt
app/Demo/: DemoApp.cpp  DemoApp.h
app/FirstApp/: CubeModel.h  FirstApp.cpp  FirstApp.h
app/SierpinskiApp/: SierpinskiApp.cpp  SierpinskiApp.h
cmake/: CompilerSettings.cmake  Dependencies.cmake  DetectModulesSupport.cmake  EmbedShaders.cmake  ExecuteHeaderGeneration.cmake  ModuleFunctions.cmake  ShaderCompilation.cmake
scripts/: check-style.sh  setup-style-tools.sh
shaders/: CMakeLists.txt  PointLight.frag  PointLight.vert  SimpleShader.frag  SimpleShader.vert  SimpleShader.vert.spv
src/: CMakeLists.txt
src/Core/: Application.h  ApplicationInfo.h  FrameInfo.h  Liara_App.cpp  Liara_App.h  Liara_Camera.cpp  Liara_Camera.h  Liara_GameObject.h  Liara_SettingSerializer.h  Liara_Settings.cpp  Liara_Settings.h  Liara_SettingsManager.cpp  Liara_SettingsManager.h  Liara_SettingsManager.tpp  Liara_SignalHandler.cpp  Liara_SignalHandler.h  Liara_Utils.h  ModuleSystem.h  Result.h
src/Core/Components/: PointLightComponent.h  RigidBody2dComponent.h  TransformComponent3d.h
src/Core/ImGui/: ImGuiElement.h  ImGuiElementDemo.h  ImGuiElementEngineStats.h  ImGuiElementExample.h  ImGuiElementMainMenu.h
src/Core/Logging/: LogCategory.h  LogLevel.h  LogMacros.h  LogMessage.h  Logger.cpp  Logger.h  ThreadSafeQueue.h
src/Core/Modules/: liara_result.cppm  liara_utils.cpp  liara_utils.cppm
src/Graphics/: GraphicsConstants.h  Liara_Buffer.cpp  Liara_Buffer.h  Liara_Buffer.tpp  Liara_Device.cpp  Liara_Device.h  Liara_Model.cpp  Liara_Model.h  Liara_Pipeline.cpp  Liara_Pipeline.h  Liara_Renderer.cpp  Liara_Renderer.h  Liara_ShaderLoader.cpp  Liara_ShaderLoader.h  Liara_SwapChain.cpp  Liara_SwapChain.h  Liara_Texture.cpp  Liara_Texture.h  PrimitiveGenerator.cpp  PrimitiveGenerator.h  VkResultToString.h
src/Graphics/Descriptors/: Liara_Descriptor.cpp  Liara_Descriptor.h  Liara_Descriptor2.cpp  Liara_Descriptor2.h
src/Graphics/Renderers/: Liara_ForwardRenderer.cpp  Liara_ForwardRenderer.h  Liara_Renderer.h  Liara_RendererManager.cpp  Liara_RendererManager.h
src/Graphics/SpecConstant/: SpecializationConstant.h
src/Graphics/Ubo/: GlobalUbo.h
src/Listener/: KeybordMovementController.cpp  KeybordMovementController.h
src/Plateform/: Liara_Window.cpp  Liara_Window.h
src/Systems/: ImGuiSystem.cpp  ImGuiSystem.h  Liara_System.h  PointLightSystem.cpp  PointLightSystem.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h
src/UI/: ImGuiEngineStats.cpp  ImGuiEngineStats.h  ImGuiLogConsole.cpp  ImGuiLogConsole.h
src/Utils/: Singleton.h
